Fix: compatibility issue with toList() method for Java versions prior to 16
- Replaced usage of the toList() method (introduced in Java 16) with collect(Collectors.toList()) to ensure compatibility with older Java versions.